# socialgenpod

./: .gitignore  LICENSE  README.md  config.toml  go.mod  pyproject.toml  requirements-llm.txt  requirements.txt  startup.sh
.github/workflows/: hugo.yaml  main_socialgenpod.yml
chat_app/: main.py  solid.py  solid_message_history.py  solid_oidc_button.py  solid_pod_utils.py
chat_app/apis/: base_api.py  demo_api.py  openai_api.py
chat_app/data/: client_id.json
example_docs/: meeting_notes.txt
llm_service/: .env.sample  attest.js  chains.py  config.py  embeddings.py  llms.py  main.py  package-lock.json  package.json  solid_utils.py  vectorstores.py
llm_service/data/: chatdocs.yml  genpod.yml
src/chat_app/: callback.py  config_utils.py  main.py  solid_oidc_button.py  solid_pod_utils.py
src/chat_app/apis/: base_api.py  demo_api.py
src/chat_app/data/: client_id.json
src/chat_app/pages/: callback.py
src/llm_service/: add.py  download.py  llms.py  main.py  solid_utils.py
src/llm_service/data/: genpod.yml
