[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solidrag"
version = "0.0.1"
dynamic = ["dependencies", "optional-dependencies"]
requires-python = ">= 3.10"
description = "Solid + Retrieval Augmented Generation Demo"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["MIT Solid", "Privacy", "LLM", "Generative AI", "Retrieval Augmented Generation"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
solidrag-chat = "chat_app.main:cli"
solidrag-llm = "llm_service.main:main"

[tool.setuptools]
packages = ["chat_app", "llm_service"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.llm = { file = ["requirements-llm.txt"] }
