[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "socialgenpod"
version = "0.0.1"
dynamic = ["dependencies", "optional-dependencies"]
requires-python = ">= 3.10"
description = "Social Linked Data + Retrieval Augmented Generation Demo"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["MIT Solid", "Social", "Linked Data", "Privacy", "LLM", "Generative AI", "Retrieval Augmented Generation"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
genpod-chat = "chat_app.main:cli"
genpod-llm = "llm_service.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.toml", "*.yml", "*.json", "*.png"]
"chat_app" = [".streamlit/*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.llm = { file = ["requirements-llm.txt"] }
